k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marketplace
  labels:
    name: marketplace
    environment: development
